# learn_flecs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  m1_main.cpp  main.cpp  main_gfx.cpp  main_scripted.cpp
cmake/: FindCorrade.cmake  FindMagnum.cmake
imgui/: bgfx_utils.cpp  icons_font_awesome.ttf.h  icons_kenney.ttf.h  imgui_bgfx.cpp  imgui_bgfx.h
modules/: common.h  input.cpp  input.h  position.cpp  position.h  resources.h  scenegraph.cpp  scenegraph.h
modules/gfx/: gfx.cpp  gfx.h  glfw_bridge.cpp  glfw_bridge.h
modules/mode/: mode.cpp  mode.h  render_sandbox.cpp  render_sandbox.h
plecs/: input_mapping.flecs  main.flecs
resources/bgfx_shaders/: shaders.h  vs_standard.sc  vs_standard_bin.h
resources/bgfx_shaders/varying/: standard.def.sc
resources/shaders/: CMakeLists.txt  fs_standard.sc  fs_standard_bin.h  vs_standard_bin.h
src/: CMakeLists.txt  main_gfx.cpp  main_test_runner.cpp
src/modules/: common.cpp  common.h  input.h  position.cpp  position.h  resources.cpp  resources.h  scenegraph.cpp  scenegraph.h
src/modules/gfx/: gfx.h  glfw_bridge.cpp  glfw_bridge.h
src/modules/mode/: mode.cpp  mode.h  render_sandbox.cpp  render_sandbox.h
src/plecs/: input_mapping.flecs
